# somnigraph

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  STEWARDSHIP.md  pyproject.toml
docs/: README.md  architecture.md  benchmarks.md  claude-md-guide.md  declined.md  experiments.md  ideas-considered.md  locomo-benchmark.md  migration-notes.md  multihop-failure-analysis.md  practitioner-signal.md  proactive-injection.md  review-package.md  review-prompt.md  roadmap.md  similar-systems.md  stewardship-history.md
docs/proposals/: autonomous-experiments.md  proactive-injection.md
docs/sessions/: 2026-03-13-initial-setup.md  2026-03-13-phase5-complete.md  2026-03-13-phase6-tending.md  2026-03-14-external-review-integration.md  2026-03-14-fresh-session-test-p1-reorder.md  2026-03-14-snippet-dogfood-test.md  2026-03-14-snippet-validation.md  2026-03-14-utility-calibration-study.md  2026-03-15-implement-limit-parameter.md  (+34 more)
memory/: MEMORY.md  feedback_dont_run_long_commands.md  feedback_gt_must_mirror_usage.md
research/: source-analysis-prompt.md
scripts/: README.md  audit_reranker_pathology.py  build_ground_truth.py  build_gt_from_feedback.py  diagnose_pathology.py  drill_query_scores.py  judge_ground_truth.py  plot_tuning.py  probe_recall.py  rerate_live_regressions.py  run_gt.cmd  run_gt.sh  select_pathology_targets.py  select_real_pathology_targets.py  sleep.py  sleep_consolidate.py  sleep_nrem.py  sleep_rem.py  sleep_timing.py  train_reranker.py  tune_gt.py  tune_memory.py  utility_calibration.py  write_shadow_histogram.py
src/: memory_server.py
(+276 files in other folders)
