[project]
name = "somnigraph"
version = "0.1.0"
description = "A research-driven memory system for Claude Code with sleep consolidation and graph-based recall."
readme = "README.md"
license = {text = "Apache-2.0 WITH Commons-Clause-1.0"}
requires-python = ">=3.11"
dependencies = [
    "sqlite-vec>=0.1.6",
    "openai>=2.0.0",
    "tiktoken>=0.7.0",
    "mcp[cli]>=1.2.0",
]

[project.urls]
Repository = "https://github.com/alexisolson/somnigraph"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memory"]
